--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
